# toy-skills

./: .gitignore  .markdownlint.jsonc  AGENTS.md  README.md  TODO.md  TODO.template.md  main.py  pyproject.toml
.agents/skills/: a-stock-analysis
.agents/skills/a-stock-analysis/scripts/: analyze.py  portfolio.py
.claude/skills/: stock-monitor
.githooks/: pre-commit  pre-push
a-stock-analysis/: SKILL.md
a-stock-analysis/scripts/: portfolio.py  search.py
docs/: static-check.md
docs/agent-skills-standard/: 000-index.md  001-overview.md  002-what-are-skills.md  003-specification.md  004-using-scripts.md
git-commit-helper/: SKILL.md
scripts/: distribute-skills.sh  install-git-hooks.sh
stock-monitor/: README.md  SKILL.draft.md  SKILL.md
stock-monitor/scripts/: analyser.py  control.sh  manual_analyse.py  monitor.py  monitor_daemon.py  search_stock.py  show_quote_request.py
stock-monitor/scripts/stock_monitor/: __init__.py  config.py  data_providers.py  enums.py  indicators.py  manual_service.py  notifier.py  rules.py  scheduler.py  search_service.py  state_store.py
tests/a-stock-analysis/: test_stock_search.py
tests/stock-monitor/: test_config.py  test_data_providers.py  test_indicators.py  test_manual_service.py  test_monitor_daemon.py  test_rules.py  test_scheduler.py  test_search_service.py
